--- a/koa-ts/package.json
+++ b/koa-ts/package.json
@@ -4,27 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_PATH=src NODE_ENV=development node index.js",
-    "production": "NODE_PATH=src NODE_ENV=production node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@koa/cors": "^2.2.2",
-    "crypto": "^1.0.1",
-    "koa": "^2.5.2",
-    "koa-bodyparser": "^4.2.1",
-    "koa-router": "^7.4.0",
-    "koa-session": "^5.9.0",
-    "mongoose": "^5.2.12",
-    "node-rsa": "^1.0.7"
+    "koa": "^2.12.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-json": "^2.0.2",
+    "koa-logger": "^3.2.1",
+    "koa-router": "^9.0.1"
   },
   "devDependencies": {
-    "@types/koa": "^2.11.3",
-    "@types/koa-router": "^7.4.1",
-    "@types/node": "^14.0.6",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.3"
+    "@types/node": "^14.0.6"
   }
 }
