--- a/koa-ts/tsconfig.json
+++ b/koa-ts/tsconfig.json
@@ -1,12 +1,13 @@
 {
+  "version": "2.0.2",
   "compilerOptions": {
-    "outDir": "./build",
-    "lib": [ "es5", "es6" ],
-    "module": "commonjs",
+    "outDir": "./dist",
+    "lib": ["es5", "es6"],
     "target": "es6",
-    "sourceMap": true
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
   },
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["./src/**/*"]
 }
